RESOLVED FIXED298883
Re-fix -Wpreferred-type-bitfield-enum-conversion warnings in WebCore
https://bugs.webkit.org/show_bug.cgi?id=298883
Summary Re-fix -Wpreferred-type-bitfield-enum-conversion warnings in WebCore
David Kilzer (:ddkilzer)
Reported 2025-09-15 10:49:39 PDT
Re-fix -Wpreferred-type-bitfield-enum-conversion warnings in WebCore. The fix for Bug 297439 (Fix -Wpreferred-type-bitfield-enum-conversion warnings in WebCore) was accidentally reverted by: Fix -Wpreferred-type-bitfield-enum-conversion warnings in WebCore <https://bugs.webkit.org/show_bug.cgi?id=297439> <rdar://158245532> <https://commits.webkit.org/298737@main>
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-15 10:50:12 PDT
David Kilzer (:ddkilzer)
Comment 2 2025-09-15 10:53:27 PDT
Oops, caused by this change: [Style] Replace FillLayer linked list with strong style typed fixed vector <https://bugs.webkit.org/show_bug.cgi?id=298113> <rdar://problem/159619297> <https://commits.webkit.org/299407@main>
David Kilzer (:ddkilzer)
Comment 3 2025-09-15 10:55:56 PDT
Pasting again to make sure this is the tracking radar used: <rdar://problem/160626315>
David Kilzer (:ddkilzer)
Comment 4 2025-09-15 11:00:40 PDT
Note You need to log in before you can comment on or make changes to this bug.