Re-fix -Wpreferred-type-bitfield-enum-conversion warnings in WebCore <https://bugs.webkit.org/show_bug.cgi?id=298883> <rdar://160626315>

Reviewed by Ryosuke Niwa.

This was originally fixed by 298737@main, but was then accidentally
regressed by 299407@main.

No test since this is caught by new clang compilers as a warning.

* Source/WebCore/rendering/style/RenderStyleConstants.h:
(WebCore::FillBoxBitWidth): Add.
- Defines bit width required to store enum class FillBox.
* Source/WebCore/style/values/backgrounds/StyleBackgroundLayer.h:
(WebCore::Style::BackgroundLayer):
- Update PREFERRED_TYPE(FillBox) fields to use FillBoxBitWidth.
* Source/WebCore/style/values/masking/StyleMaskLayer.h:
(WebCore::Style::MaskLayer):
- Update PREFERRED_TYPE(FillBox) fields to use FillBoxBitWidth.

Canonical link: https://commits.webkit.org/299975@main