Source/WebCore/style/values/masking/StyleMaskLayer.h
@@ -109,12 +109,12 @@ private:
     BackgroundSize m_size;
     RepeatStyle m_repeat;
 
-    PREFERRED_TYPE(FillBox) unsigned m_clip : 3;
-    PREFERRED_TYPE(FillBox) unsigned m_origin : 2;
+    PREFERRED_TYPE(FillBox) unsigned m_clip : FillBoxBitWidth;
+    PREFERRED_TYPE(FillBox) unsigned m_origin : FillBoxBitWidth;
     PREFERRED_TYPE(CompositeOperator) unsigned m_composite : 4;
     PREFERRED_TYPE(MaskMode) unsigned m_maskMode : 2;
 
-    PREFERRED_TYPE(FillBox) mutable unsigned m_clipMax : 2; // maximum m_clip value from this to bottom layer
+    PREFERRED_TYPE(FillBox) mutable unsigned m_clipMax : FillBoxBitWidth; // maximum m_clip value from this to bottom layer
 };
 
 using MaskLayers = FillLayers<MaskLayer>;
